--- a/resources/css/product.css
+++ b/resources/css/product.css
@@ -6,15 +6,15 @@
 }
 
 abbr {
-    font-style: italic;
     position: relative;
 }
 
 abbr:hover::after {
-    background: #add8e6;
-    border-radius: 4px;
+    background: #000000;
+    color:rgb(255, 255, 255);
+    box-shadow: 5px 10px 2px #000000ab;
     bottom: 100%;
-    content: attr(title);
+    content: attr(data);
     display: block;
     left: 100%;
     padding: 1em;
