--- a/resources/css/product.css
+++ b/resources/css/product.css
@@ -1,10 +1,4 @@
 
-h1 {
-  text-align: center;
-  font-family: Tahoma, Arial, sans-serif;
-  color: #06D85F;
-  margin: 80px 0;
-}
 
 .button {
   font-size: 1em;
@@ -14,7 +8,7 @@ h1 {
   border-radius: 20px/50px;
   text-decoration: none;
   cursor: pointer;
-  transition: all 0.3s ease-out;
+  
 }
 .button:hover {
   background: #06D85F;
@@ -40,10 +34,9 @@ h1 {
   margin: 70px auto;
   padding: 20px;
   background: #fff;
-  border-radius: 5px;
-  width: 30%;
+  width: 40%;
+  height: 70vh;
   position: relative;
-  transition: all 5s ease-in-out;
 }
 
 .popup h2 {
